[package]
name = "linkwarden-aitiquette"
authors = [ "Vincent Besançon <contact@stash.vinzworld.fr>" ]
license-file = "LICENSE"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
env_logger = "0.11"
log = "0.4"
openai-api-rs = "5.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
